--- a/Web/RWD/hours.html
+++ b/Web/RWD/hours.html
@@ -5,6 +5,8 @@
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width">
         <meta name="author" content="Veera Venkata Naga Phanindra Pinniboina">
+        <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9853098735838116"
+     crossorigin="anonymous"></script>
         <title>House of Cards | Business Hours</title>
         <link href="style.css" rel="stylesheet">
     </head>
