--- a/index.html
+++ b/index.html
@@ -6,22 +6,22 @@
         <meta name="viewport" content="width=device-width">
         <meta name="author" content="Veera Venkata Naga Phanindra Pinniboina">
         <title>Veera Pinniboina | Welcome</title>
+        <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9853098735838116"
+     crossorigin="anonymous"></script>
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@700&family=Russo+One&display=swap" rel="stylesheet">
-        <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
         <link href="style.css" rel="stylesheet">
     </head>
     <body><!--Body code of html-->
         <header><!--Logo and head goes here-->
             <div class="container">
                 <div class="logo">
-                    <h1>Phanindra</h1>
+                    <a href="home.html">
+                    <img src=logo.png alt="phanindra logo" class="img"></a>
                 </div>
             </div>
         </header>
         <Main><!--Main contents of all pages goes here-->
-            
             <div class="container">
                 <div id="welcome">
                     <h3>Welcome to my Protfolio</h3>
@@ -42,14 +42,24 @@
             <section id="boxes">
                 <div class="container">
                     <div class="box">
+                        <a target="_blank" href="https://password-generator.com.au/">
+                            <img src="Web/pg.png" alt="Password Generator"></a>
+                        <p>Password Generator</p>
+                    </div>
+                    <div class="box">
                         <a target="_blank" href="/Web/RWD/home.html">
                             <img src="Web/rwd.png" alt="Responsive Website"></a>
                         <p>Responsive Website</p>
                     </div>
                     <div class="box">
-                        <a target="_blank" href="/Web/">
+                        <a target="_blank" href="/Web/Financial/index.html">
                             <img src="Web/fg.png" alt="Finance-calculator"></a>
                         <p>Finance Calculator</p>
+                    </div>
+                    <div class="box">
+                        <a target="_blank" href="/Web/pinniboina/index.html">
+                            <img src="Web/store.png" alt="Pinniboyina_Store"></a>
+                        <p>Pinniboyina Store</p>
                     </div>
                 </div>
             </section>
@@ -76,7 +86,7 @@
             </section>
         </Main>
         <footer><!--footer imformation-->
-            <h4>Copyright &copy; 2023 Veera Venkata Naga Phanindra Pinniboina.</h4>
+            <h4>Copyright &copy; 2023 Phanindra Pinniboina.</h4>
             <p id="date"></p>
         </footer>
         <script src="main.js"></script>
