--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                     </div>
                     <div class="box">
                         <img src="/Google Form.png">
-                        <p><a href="https://docs.google.com/forms/d/18SUNVAp5SUIVgYBqJ6dMc1V8lcG2vUh1-ucIAmJtA88/edit"><h3>Google Form</h3></a></p>
+                        <p><a href="https://www.buymeacoffee.com/pinniboyina"><h3>Buy me a Coffee</h3></a></p>
                     </div>
                     <div class="box">
                         <img src="/git.png">
