--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                         <p><a href="https://linkedin.com/in/phanindra-pinniboyina"><h3>LinkedIn</h3></a></p>
                     </div>
                     <div class="box">
-                        <img src="/Google Form.png">
+                        <img src="/bmc.png">
                         <p><a href="https://www.buymeacoffee.com/pinniboyina"><h3>Buy me a Coffee</h3></a></p>
                     </div>
                     <div class="box">
