--- a/index.html
+++ b/index.html
@@ -90,5 +90,6 @@
             <p id="date"></p>
         </footer>
         <script src="main.js"></script>
+        <script type="text/javascript" src="https://cdnjs.buymeacoffee.com/1.0.0/button.prod.min.js" data-name="bmc-button" data-slug="pinniboyina" data-color="#FFDD00" data-emoji="" data-font="Cookie" data-text="Buy me a coffee" data-outline-color="#000000" data-font-color="#000000" data-coffee-color="#ffffff" ></script>
     </body>
 </html>
