--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                     </div>
                     <div class="box">
                         <img src="/bmc.png">
-                        <p><a href="https://www.buymeacoffee.com/pinniboyina"><h3>Buy me a Coffee</h3></a></p>
+                        <!--<p><a href="https://www.buymeacoffee.com/pinniboyina"><h3>Buy me a Coffee</h3></a></p>-->
                         <script type="text/javascript" src="https://cdnjs.buymeacoffee.com/1.0.0/button.prod.min.js" data-name="bmc-button" data-slug="pinniboyina" data-color="#FFDD00" data-emoji="" data-font="Cookie" data-text="Buy me a coffee" data-outline-color="#000000" data-font-color="#000000" data-coffee-color="#ffffff" ></script>
                     </div>
                     <div class="box">
@@ -91,6 +91,5 @@
             <p id="date"></p>
         </footer>
         <script src="main.js"></script>
-        <script type="text/javascript" src="https://cdnjs.buymeacoffee.com/1.0.0/button.prod.min.js" data-name="bmc-button" data-slug="pinniboyina" data-color="#FFDD00" data-emoji="" data-font="Cookie" data-text="Buy me a coffee" data-outline-color="#000000" data-font-color="#000000" data-coffee-color="#ffffff" ></script>
     </body>
 </html>
