--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                     <div class="box">
                         <!--<img src="/LinkedIn.png">
                         <p><a href="https://linkedin.com/in/phanindra-pinniboyina"><h3>LinkedIn</h3></a></p>-->
-                        <div class="badge-base LI-profile-badge" data-locale="en_US" data-size="medium" data-theme="light" data-type="VERTICAL" data-vanity="phanindra-pinniboyina" data-version="v1"><a class="badge-base__link LI-simple-link" href="https://au.linkedin.com/in/phanindra-pinniboyina?trk=profile-badge">Phanindra Pinniboina</a></div>
+                        <div class="badge-base LI-profile-badge" data-locale="en_US" data-size="medium" data-theme="light" data-type="VERTICAL" data-vanity="phanindra-pinniboyina" data-version="v1"><a class="badge-base__link LI-simple-link" href="https://au.linkedin.com/in/phanindra-pinniboyina">Phanindra Pinniboina</a></div>
                     </div>
                     <div class="box">
                         <img src="/bmc.png">
