--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <title>Veera Pinniboina | Welcome</title>
         <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9853098735838116"
      crossorigin="anonymous"></script>
-        <script src="https://platform.linkedin.com/badges/js/profile.js" async defer type="text/javascript"></script>
+        <script async src="https://platform.linkedin.com/badges/js/profile.js" type="text/javascript"></script>
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="style.css" rel="stylesheet">
