--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                     <div class="box">
                         <img src="/bmc.png">
                         <!--<p><a href="https://www.buymeacoffee.com/pinniboyina"><h3>Buy me a Coffee</h3></a></p>-->
-                        <script type="text/javascript" src="https://cdnjs.buymeacoffee.com/1.0.0/button.prod.min.js" data-name="bmc-button" data-slug="pinniboyina" data-color="#FFDD00" data-emoji="" data-font="Cookie" data-text="Buy me a coffee" data-outline-color="#000000" data-font-color="#000000" data-coffee-color="#ffffff" ></script>
+                        <div class="badge-base LI-profile-badge" data-locale="en_US" data-size="medium" data-theme="dark" data-type="VERTICAL" data-vanity="phanindra-pinniboyina" data-version="v1"><a class="badge-base__link LI-simple-link" href="https://au.linkedin.com/in/phanindra-pinniboyina?trk=profile-badge">Phanindra Pinniboina</a></div>
                     </div>
                     <div class="box">
                         <img src="/git.png">
@@ -88,10 +88,11 @@
                 </div>
             </section>
         </Main>
-        <footer><!--footer imformation-->
+        <footer><!--footer information-->
             <h4>Copyright &copy; 2023 Phanindra Pinniboina.</h4>
             <p id="date"></p>
         </footer>
         <script src="main.js"></script>
+        <script src="https://platform.linkedin.com/badges/js/profile.js" async defer type="text/javascript"></script>
     </body>
 </html>
