--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
         <meta name="author" content="Veera Venkata Naga Phanindra Pinniboina">
         <title>Veera Pinniboina | Welcome</title>
         <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9853098735838116"
-     crossorigin="anonymous"></script>
-        <script async src="https://platform.linkedin.com/badges/js/profile.js" type="text/javascript"></script>
+             crossorigin="anonymous"></script>
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="style.css" rel="stylesheet">
@@ -72,9 +71,8 @@
             <section id="boxes">
                 <div class="container">
                     <div class="box">
-                        <!--<img src="/LinkedIn.png">
-                        <p><a href="https://linkedin.com/in/phanindra-pinniboyina"><h3>LinkedIn</h3></a></p>-->
-                        <div class="badge-base LI-profile-badge" data-locale="en_US" data-size="medium" data-theme="light" data-type="VERTICAL" data-vanity="phanindra-pinniboyina" data-version="v1"><a class="badge-base__link LI-simple-link" href="https://au.linkedin.com/in/phanindra-pinniboyina?trk=profile-badge">Phanindra Pinniboina</a></div>
+                        <img src="/LinkedIn.png">
+                        <p><a href="https://linkedin.com/in/phanindra-pinniboyina"><h3>LinkedIn</h3></a></p>
                     </div>
                     <div class="box">
                         <img src="/bmc.png">
@@ -93,6 +91,5 @@
             <p id="date"></p>
         </footer>
         <script src="main.js"></script>
-        <script src="https://platform.linkedin.com/badges/js/profile.js" async defer type="text/javascript"></script>
     </body>
 </html>
