--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                     <div class="box">
                         <img src="/bmc.png">
                         <!--<p><a href="https://www.buymeacoffee.com/pinniboyina"><h3>Buy me a Coffee</h3></a></p>-->
-                        <div class="badge-base LI-profile-badge" data-locale="en_US" data-size="medium" data-theme="dark" data-type="VERTICAL" data-vanity="phanindra-pinniboyina" data-version="v1"><a class="badge-base__link LI-simple-link" href="https://au.linkedin.com/in/phanindra-pinniboyina?trk=profile-badge">Phanindra Pinniboina</a></div>
+                        <script type="text/javascript" src="https://cdnjs.buymeacoffee.com/1.0.0/button.prod.min.js" data-name="bmc-button" data-slug="pinniboyina" data-color="#FFDD00" data-emoji=""  data-font="Cookie" data-text="Buy me a coffee" data-outline-color="#000000" data-font-color="#000000" data-coffee-color="#ffffff" ></script>
                     </div>
                     <div class="box">
                         <img src="/git.png">
