--- a/index.html
+++ b/index.html
@@ -86,6 +86,9 @@
                     </div>
                 </div>
             </section>
+            <div class="container">
+                <div id="clock">8:10:45</div>
+            </div>
         </Main>
         <footer><!--footer information-->
             <h4>Copyright &copy; 2023 Phanindra Pinniboina.</h4>
