--- a/index.html
+++ b/index.html
@@ -42,6 +42,11 @@
             <section id="boxes">
                 <div class="container">
                     <div class="box">
+                        <a target="_blank" href="/Web/Dairy/index.html">
+                            <img src="Web/essay.png" alt="Dairy"></a>
+                        <p>Dairy - Today's Adventure</p>
+                    </div>
+                    <div class="box">
                         <a target="_blank" href="https://password-generator.com.au/">
                             <img src="Web/pg.png" alt="Password Generator"></a>
                         <p>Password Generator</p>
