--- a/Web/Dairy/index.html
+++ b/Web/Dairy/index.html
@@ -13,7 +13,7 @@
     <div id="essay-container">
         <h1>Dairy - Today's adventure</h1>
         <p>Date: <span id="date">time</span></p>
-        <textarea id="essayInput" placeholder="Start typing your essay here..."></textarea>
+        <textarea id="essayInput" placeholder="Start typing your thoughts here..."></textarea>
         <p>Word Count: <span id="wordCount">0</span></p>
         <button id="save-btn">Save the adventure</button>
     </div>
