--- a/Web/Dairy/index.html
+++ b/Web/Dairy/index.html
@@ -13,9 +13,10 @@
     <div id="essay-container">
         <h1>Dairy - Today's adventure</h1>
         <p>Date: <span id="date">time</span></p>
+        <p id="timer">Time Remaining: 20:00</p>
         <textarea id="essayInput" placeholder="Start typing your thoughts here..."></textarea>
         <p>Word Count: <span id="wordCount">0</span></p>
-        <button id="save-btn">Save the adventure</button>
+        <button onclick="saveAsDocument()" id="save-btn">Save</button>
     </div>
     
     <script src="script.js"></script>
